k8s/base/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: shporaai
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
